@@ -1,3 +1,7 @@
+2019-10-09  Jason Merrill  <jason@redhat.com>
+
+	* cp-tree.h (template_info_decl_check): Check ENABLE_TREE_CHECKING.
+
 2019-10-09  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/91364 - P0388R4: Permit conversions to arrays of	unknown bound.
